# videonewsgen

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: README.md  core.cpp  core.hpp
