PROJECT(videonewsgen)

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
INCLUDE (CMakeMacro.cmake)

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(PC_LIBgstreamer QUIET gstreamer-0.10)
INCLUDE_DIRECTORIES(${PC_LIBgstreamer_INCLUDE_DIRS})

AUX_SOURCE_DIRECTORY(src SRC_BASE)
ADD_EXECUTABLE(videonewsgen ${SRC_BASE})
TARGET_LINK_LIBRARIES(videonewsgen ${PC_LIBgstreamer_LIBRARIES})

